继续进行V2重构